--- a/product/大数据与AI/弹性MapReduce/购买指南/计费概述/大数据型.md
+++ b/product/大数据与AI/弹性MapReduce/购买指南/计费概述/大数据型.md
@@ -1,6 +1,6 @@
 EMR 提供的弹性计算集群能力，允许用户选择多种规格进行自定义组合。EMR 产品收取的费用由各集群中的全部节点构成。
 
-广州、上海、北京、成都、南京、硅谷、新加坡地域的节点价格如下：
+北京、上海、广州、成都、南京、硅谷、新加坡地域的节点价格如下：
 >?
 >1. 官网价格会根据情况做适当调整，具体价格请参考官网，此处不作为长期有效数据。
 >2. 磁盘类型价格请参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
