--- a/product/域名与网站/网站备案/备案准备/教育类承诺书模板下载.md
+++ b/product/域名与网站/网站备案/备案准备/教育类承诺书模板下载.md
@@ -92,3 +92,21 @@
 </tbody>
 </table>
 
+
+## 福建省网站不涉及“校外培训”的情况说明书
+
+<table>
+<thead>
+  <tr>
+    <th>模板</th>
+    <th>填写说明</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td><img src="https://main.qcloudimg.com/raw/8bd3f32b358fb62e70851b35f8a6168f.png"></td>
+    <td>1.填写企业全称。<br>2. 填写营业执照统一社会信用代码。<br>3. 填写备案的二级域名。<br>4. 填写网站名称。<br>5. 填写网站实际内容。<br>6. 备案网站面向人群<br>7. 备案网站所提供的服务类型。<br>8. 填写企业全称并加盖企业鲜章。<br>9. 法定代表人签字。<br>10. 签署日期。 </td>
+  </tr>
+</tbody>
+</table>
+
