--- a/product/监控与管理/前端性能监控/接入指南/小程序场景/性能监控.md
+++ b/product/监控与管理/前端性能监控/接入指南/小程序场景/性能监控.md
@@ -3,8 +3,17 @@
 
 
 ## 页面测速
-Aegis 会从小程序 performance 对象中收集页面性能信息，然后上报  `firstRender`  的时间。
 
+> Aegis 小程序 SDK 会自动收集页面性能数据并上报。包括：
+1. 程序启动时间
+2. 代码注入时间
+3. 页面首次渲染时间
+4. 路由切换时间
+
+::: warning 注意 ⚠️
+获取页面性能数据依赖小程序的 Performance API，请保证基础库版本 `>2.11.0`。
+手Q小程序目前暂时不支持 Performance API，所以不会上报页面性能数据。
+:::
 
 ## 接口测速
 
