--- a/product/移动与通信/移动解析/操作指南/添加域名.md
+++ b/product/移动与通信/移动解析/操作指南/添加域名.md
@@ -11,7 +11,7 @@
 3. 在弹出的 “添加域名” 窗口中，填写您需要进行解析的域名。如下图所示：
 >! 
 >- 添加的域名仅支持二级域名，例如 `tencent.com`，不支持 `cloud.tencent.com` 等域名。
->- 支持添加200个域名。
+>- 支持添加**200个**域名。
 >
 ![](https://main.qcloudimg.com/raw/cab1e244258097d81ad000339aeb387c.png)
 4. 单击**确定**，即可完成添加解析域名操作。
