--- a/product/管理与支持/账号相关/实名认证/管理认证信息/变更法人信息.md
+++ b/product/管理与支持/账号相关/实名认证/管理认证信息/变更法人信息.md
@@ -5,6 +5,7 @@
 ## 注意事项
 
 - 支持通过提交统一信用代码认证，且认证为工商类企业（即在工商部门注册，统一信用代码为18位且91/92开头）的账号，变更法人信息以及新增法人信息。
+- 仅支持提交中华人民共和国居民身份证信息，发起修改。
 - 法人信息可以用于账号安全设置等校验中，如未填写，建议补齐。
 
 ## 操作步骤
