--- a/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/盲水印功能.md
@@ -19,7 +19,7 @@
 | 全盲水印（type2） | 提取方便，提取水印仅需水印图，无需对比原图 | 批量添加，批量校验      |
 | 文字盲水印（type3） | 可直接将文字信息添加至图片中              | 终端信息添加            |
 
-盲水印是付费服务，使用时需在相应存储桶配置页中通过开关开通服务。每个账户每月拥有3000次免费额度，超出部分需付费。具体费用请参见 [计费与定价](https://cloud.tencent.com/document/product/460/6970)。
+盲水印是付费服务，使用时需在相应存储桶配置页中通过开关开通服务。每个账户每月拥有3000次免费额度，超出部分需付费。具体费用请参见 [图片处理费用](https://cloud.tencent.com/document/product/460/58117#.E7.9B.B2.E6.B0.B4.E5.8D.B0.E8.B4.B9.E7.94.A8)。
 
 >?
 - 暂不支持为动图（例如 GIF 图片）添加盲水印。
@@ -241,9 +241,8 @@ x-cos-request-id: NWFjMzQ0MDZfOTBmYTUwXzZkZV8z****
 ```
 
 >!
-
-- 请求体的 filecontent 字段为原图的图片内容，请求头 Pic-Operations 的 rule 字段中，imageUrl 为水印图片地址。
-- 返回包 process_results 字段的 url 为携带盲水印的图片地址。
+>- 请求体的 filecontent 字段为原图的图片内容，请求头 Pic-Operations 的 rule 字段中，imageUrl 为水印图片地址。
+>- 返回包 process_results 字段的 url 为携带盲水印的图片地址。
 
 
 ### 请求二：下载时添加盲水印
