--- a/product/安全服务/云防火墙/操作指南/访问控制/身份访问控制/配置步骤.md
+++ b/product/安全服务/云防火墙/操作指南/访问控制/身份访问控制/配置步骤.md
@@ -57,4 +57,8 @@
 ![](https://main.qcloudimg.com/raw/c873b69318dedc01f3010ea73131f8f0.png)
 
 ## 相关信息
-如遇到访问控制相关问题，可参见 [访问控制](https://cloud.tencent.com/document/product/1132/56778) 文档。
+- 如遇到访问控制相关问题，可参见 [访问控制](https://cloud.tencent.com/document/product/1132/56778) 文档。
+- 接入域名：使用 [微信远程运维](https://cloud.tencent.com/document/product/1132/53010) 功能连接云上资产时，需要访问“接入域名”。
+  1. 公共域名允许您通过云防火墙提供的公网域名远程接入您的公网资产的 SSH/RDP 服务。
+  2. 各地域的接入域名允许您通过NAT边界防火墙访问全部公网SSH/RDP服务，以及该地域的全部内网 SSH/RDP 服务。
+  3. 请注意：在使用安全组策略封禁实例的22、3389端口时，请对以下各地域的实例放行对应的 IP：159.75.206.213(全部地域)，118.89.254.140(全部地域)，10.255.0.18(深圳金融)，10.255.0.19(深圳金融)。
