--- a/product/监控与管理/前端性能监控/接入指南/小程序场景/安装和初始化.md
+++ b/product/监控与管理/前端性能监控/接入指南/小程序场景/安装和初始化.md
@@ -1,5 +1,6 @@
-小程序仅支持 NPM 方式安装 SDK 。
-本 SDK 支持微信小程序和手Q小程序。
+## 注意事项
+- 小程序仅支持 NPM 方式安装 SDK 。
+- 本 SDK 支持微信小程序和QQ小程序。
 
 > ?aegis-sdk 默认使用 `aegis.qq.com` 作为上报域名，您也可以选择使用 `tamaegis.com` 作为上报域名。
 
