--- a/product/域名与网站/域名注册/域名服务/域名转入.md
+++ b/product/域名与网站/域名注册/域名服务/域名转入.md
@@ -4,10 +4,6 @@
 ## 操作场景
 将域名从其他域名注册商转到腾讯云域名服务内，转移过程大约需要**5 - 7**个工作日，由腾讯云为您继续提供域名服务，我们称之为域名转入。
 
-## [相关信息](id:message)
-根据国际互联网域名与地址管理机构（ICANN）的 [转让政策规定](https://www.icann.org/resources/pages/transfer-policy-2017-05-23-zh?spm=a2c4g.11186623.2.16.44304fba8YVhiO)，修改域名信息过程中**勾选开启 “60天禁止转移注册商锁定期”**，60天内将禁止域名从当前接入商转出。
-- 如在域名转入时，**未勾选开启 “60天内禁止转移注册商锁定”**，则可在域名转入成功60天后进行域名转出等操作。
-- 如在域名转入时，**勾选开启 “60天内禁止转移注册商锁定”**，且在域名转入60天锁定期内修改域名持有者信息，则需要在域名持有者信息修改成功60天后才可进行域名转出等操作。
 
 ## [前提条件](id:preconditions)
 域名转入是注册商之间的转移，腾讯云域名的转入条件如下：
@@ -51,14 +47,11 @@
 4. 单击**域名转入**，进入域名转入流程。
 
 ### 域名转入步骤
-
 1. 请根据页面提示，填写信息并勾选相关协议，单击**提交**。如下图所示：
->!根据 ICANN 相关规定，为保护您的域名安全，修改域名信息过程中**勾选开启 "60天禁止转移注册商锁定期"**，60天内将禁止域名从当前接入商转出。如需转出域名，**请勿勾选开启 "60天禁止转移注册商锁定期"**。详情请查看 [相关信息](#message)。
->
-![域名转入](https://main.qcloudimg.com/raw/4ffcf4c53df5e6c95c0537bac39fe2db.png)
-  - 域名和转移密码：根据实际需求，进行填写。
-  - 绑定信息模板：根据实际需求，选择已实名的信息模板。如果暂无已实名信息模版，请创建新的信息模版。信息模版的相关信息可参考 [域名信息模版](https://cloud.tencent.com/document/product/242/15435)。
-  - 自动续费：系统将会在域名到期前为您自动续费，请确保账户余额充足。
+![域名转入](https://main.qcloudimg.com/raw/cb9f3256128436efcef92f3372bf88cb.png)
+  - **域名和转移密码**：根据实际需求，进行填写。
+  - **绑定信息模板**：根据实际需求，选择已实名的信息模板。如果暂无已实名信息模版，请创建新的信息模版。信息模版的相关信息可参考 [域名信息模版](https://cloud.tencent.com/document/product/242/15435)。
+  - **自动续费**：系统将会在域名到期前为您自动续费，请确保账户余额充足。
 <dx-alert infotype="explain" title="">
 开启自动续费后，若您需要关闭自动续费，可在 [域名列表](https://console.cloud.tencent.com/domain/) 中进行关闭操作。
 </dx-alert>
