feat: 增加序列帧类型素材使用说明

--- a/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
+++ b/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
@@ -1,9 +1,103 @@
 
->! 使用前请通过 CDN 引入库方法，目前最新版本为`2.1.1`。
+>! 使用前请通过 CDN 引入库方法，目前最新版本为`2.1.2`。
 
 ```html
-<script src="https://vs-cdn.tencent-cloud.com/sdk/yj-player-helper-2.1.1.js"></script>
+<script src="https://vs-cdn.tencent-cloud.com/sdk/yj-player-helper-2.1.2.js"></script>
 ```
+## 使用序列帧-贴片/序列帧-文字/序列帧-特效
+
+```js
+/**
+* 使用此能力需要更新player版本至 1.4.8,从这里获取
+* https://vs-cdn.tencent-cloud.com/sdk/yj-player-1.4.8.js
+* 1. 创建一个对应类型轨道
+* 2. 通过指定素材ID创建轨道元素，【注意】此功能对象不可进行序列化，对象中包含BLOB类型数据
+* 3. 装填轨道
+* 4. 得到一个可预览协议 
+**/
+/**
+ * 序列帧-贴片
+ */
+async function demo9() {
+  // image-sequence
+  const track = YJPlayerHelper.Track.create({
+    type: 'image',
+  })
+
+  const trackItem = await YJPlayerHelper.TrackItem.createSequence(
+    '608a7497c1af830001c9292e@Public@CME', //素材ID
+    yjPlayer //yjPlayer的实例
+    // 可选参数
+    // { 
+    //   width?: number
+    //   height?: number
+    //   position?: {
+    //     x: number
+    //     y: number
+    //   }
+    //   start_time?: number
+    //   duration?: number
+    // }
+  )
+
+  YJPlayerHelper.Track.append(track, trackItem)
+  const resultData = [track]
+  return resultData
+}
+
+/**
+ * 序列帧-文字
+ */
+async function demo10() {
+  // title-sequence_title
+  const track = YJPlayerHelper.Track.create({
+    type: 'title',
+  })
+  const trackItem = await YJPlayerHelper.TrackItem.createSequence(
+    '608bc4d689ea7200013ff244@Public@CME', //素材ID
+    yjPlayer //yjPlayer的实例
+    // {
+    //   width?: number
+    //   height?: number
+    //   position?: {
+    //     x: number
+    //     y: number
+    //   }
+    //   start_time?: number
+    //   duration?: number
+    //   content?: 文字可用的配置项，参考 advanced_title
+    // }
+  )
+  YJPlayerHelper.Track.append(track, trackItem)
+  const resultData = [track]
+  return resultData
+}
+
+/**
+ * 序列帧-特效
+ */
+async function demo11() {
+  // frame-sequence_effect
+  // subType: shader
+
+  const track = YJPlayerHelper.Track.create({
+    type: 'shader',
+  })
+  const trackItem = await YJPlayerHelper.TrackItem.createSequence(
+    '60ebfe3852840e0001b4836c@Public@CME', //素材ID
+    yjPlayer //yjPlayer的实例
+    // {
+    //   start_time?: number
+    //   duration?: number
+    // }
+  )
+  YJPlayerHelper.Track.append(track, trackItem)
+  const resultData = [track]
+  return resultData
+}
+
+```
+
 
 ## 使用公共滤镜
 ```js
