--- a/product/监控与管理/前端性能监控/购买指南/计费概述.md
+++ b/product/监控与管理/前端性能监控/购买指南/计费概述.md
@@ -19,7 +19,7 @@
 <li>不足10000按10000计算</li>
 </dx-alert>
 
-## 如何预估前端性能监控成本
+## 预估前端性能监控成本
 ### 预估每日上报流量
 计算公式 = (PV + API 统计次数 + 静态资源统计次数 + 错误日志次数 + 自定义上报次数) - 50万
 
