--- a/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/常见问题.md
@@ -13,3 +13,6 @@
 
 ### 如何购买威胁情报云查服务？
 如需购买威胁情报云查服务，详情请参见 [购买方式](https://cloud.tencent.com/document/product/1013/31824)。
+
+### 威胁情报云查服务的应用场景有哪些？
+关于威胁情报云查服务的应用场景，详情请参见 [应用场景](https://cloud.tencent.com/document/product/1013/31160)。
