--- a/product/管理与支持/云+社区/问答.md
+++ b/product/管理与支持/云+社区/问答.md
@@ -5,7 +5,7 @@
 
 ## 提问
 
-顶部导航右上角，单击**提问**图标
+在顶部导航右上角，单击**提问**图标。
 ![](https://main.qcloudimg.com/raw/10a179b14173706c936f5afcc76952d6.png)
 
 在**提问题**弹框页面，填写问题标题、问题标签以及问题描述（可选），确认后提交即可。
