--- a/product/存储与CDN/文件存储/1-产品简介/存储类型及性能规格.md
+++ b/product/存储与CDN/文件存储/1-产品简介/存储类型及性能规格.md
@@ -7,7 +7,7 @@ Turbo标准型文件存储是基于混合介质的并行文件存储，采用非
 ### 通用性能型
 通用性能型文件存储是基于全NVMe介质的通用文件存储，通过数据分层机制提供高性能存储能力，同时采用三副本的存储方式和高可用（HA)的故障切换机制，保障数据的可靠性和服务的高可用，适合于小规模延时敏感型核心业务。
 ### Turbo性能型
-Turbo性能型文件存储是基于全NVMe介质的并行文件存储，采用非对称架构，数据节点和元数据节点独立部署。提供私有协议的挂载方式，单客户端性能可达存储集群性能。同时资源在底层进行隔离，保障存储集群独享，并采用三副本的存储方式和热迁移机制，保障数据的可靠性和服务的高可用，适用于大规模适用于大规模小文件业务。
+Turbo性能型文件存储是基于全NVMe介质的并行文件存储，采用非对称架构，数据节点和元数据节点独立部署。提供私有协议的挂载方式，单客户端性能可达存储集群性能。同时资源在底层进行隔离，保障存储集群独享，并采用三副本的存储方式和热迁移机制，保障数据的可靠性和服务的高可用，适用于大规模小文件业务。
 
 <table> 
     <tr align="center">
