--- a/product/安全服务/云访问安全代理/操作指南/敏感数据识别/规则管理/规则/编辑规则.md
+++ b/product/安全服务/云访问安全代理/操作指南/敏感数据识别/规则管理/规则/编辑规则.md
@@ -44,11 +44,12 @@
 </tr>
 <tr>
 <td>字段规则</td>
-<td>逻辑： 需要选择字段规则的逻辑，逻辑分为 and 和 or :<li>and： 字段规则都需要包含。</li><li>or：仅需要包含其中一个字段规则。</li>类型：可选择关键字和正则 :<li>关键字：通过关键字来执行该字段规则 。</li><li>正则：用于指定和识别文本字符串的字段规则。</li>内容：输入字段内容，最多可添加9项内容。</td>
+<td>逻辑： 需要选择字段规则的逻辑，逻辑分为 and 和 or :<ul><li>and： 字段规则都需要包含。</li>
+<li>or：仅需要包含其中一个字段规则。</li></ul>类型：可选择关键字和正则 :<ul><li>关键字：通过关键字来执行该字段规则 。</li><li>正则：用于指定和识别文本字符串的字段规则。</li></ul>内容：输入字段内容，最多可添加9项内容。</td>
 </tr>
 <tr>
 <td>内容规则</td>
-<td>逻辑： 需要选择内容规则的逻辑，逻辑分为 and 和 or :<li>and： 内容规则都需要包含。</li><li>or：仅需要包含其中一个内容规则。</li>类型：可选择关键字和正则 :<li>关键字：通过关键字来执行该内容规则 。</li><li>正则：用于指定和识别文本字符串的内容规则。</li>内容：输入规则内容，最多可添加9项内容。</td>
+<td>逻辑： 需要选择内容规则的逻辑，逻辑分为 and 和 or :<ul><li>and： 内容规则都需要包含。</li><li>or：仅需要包含其中一个内容规则。</li></ul>类型：可选择关键字和正则 :<ul><li>关键字：通过关键字来执行该内容规则 。</li><li>正则：用于指定和识别文本字符串的内容规则。</ul></li>内容：输入规则内容，最多可添加9项内容。</td>
 </tr>
 <tr>
 <td>字段</td>
@@ -64,7 +65,6 @@
 </tr>
 </tbody></table>
 >? 在字段规则和内容规则中，**关键字** 类型支持修改扩展配置，对全文匹配、忽略大小写功能进行编辑。
-
  - 创建对象存储 COS 类型的规则
  ![](https://main.qcloudimg.com/raw/ab16ac4cbed95498e6f3f6ad3bfdda6b.png)
 参数列表：
@@ -97,7 +97,7 @@
 </tr>
 <tr>
 <td>正则</td>
-<td>选择内容规则的正则逻辑，逻辑分为  and  和  or 。 <li>and： 内容规则都需要包含。</li><li>or：仅需要包含其中一个内容规则。<br>其中内容，可添加1~5项。</li></td>
+<td>选择内容规则的正则逻辑，逻辑分为  and  和  or 。 <ul><li>and： 内容规则都需要包含。</li><li>or：仅需要包含其中一个内容规则。</ul>其中内容，可添加1~5项。</li></td>
 </tr>
 <tr>
 <td>关键字</td>
@@ -114,9 +114,5 @@
 <tr>
 <td>验证</td>
 <td>根据输入的内容，检验配置的规则是否正确。</td>
-</tr>
-<tr>
-<td></td>
-<td></td>
 </tr>
 </tbody></table>
