--- a/product/安全服务/云访问安全代理/操作指南/敏感数据识别/规则管理/规则/编辑规则.md
+++ b/product/安全服务/云访问安全代理/操作指南/敏感数据识别/规则管理/规则/编辑规则.md
@@ -12,7 +12,7 @@
 3. 在规则页面中，找到所需编辑的规则，在其右侧的操作中，单击【编辑】，弹出编辑规则弹窗。
 ![](https://main.qcloudimg.com/raw/90228dbd5e0be44cc25cefa568292ef8.png)
 4. 在编辑规则弹窗中，可以编辑规则的基本信息及数据规则，规则修改完成后单击 【确定】，即可完成编辑。
- - 编辑关系型数据库类型的规则
+ - **编辑关系型数据库类型的规则**
  ![](https://main.qcloudimg.com/raw/b6e08bed3a57538f489222523d7a0322.png)
 参数列表：
 <table>
@@ -65,7 +65,7 @@
 </tr>
 </tbody></table>
 >? 在字段规则和内容规则中，**关键字** 类型支持修改扩展配置，对全文匹配、忽略大小写功能进行编辑。
- - 创建对象存储 COS 类型的规则
+ - **创建对象存储 COS 类型的规则**
  ![](https://main.qcloudimg.com/raw/ab16ac4cbed95498e6f3f6ad3bfdda6b.png)
 参数列表：
 <table>
