--- a/product/安全服务/云防火墙/操作指南/日志审计.md
+++ b/product/安全服务/云防火墙/操作指南/日志审计.md
@@ -48,9 +48,18 @@
 &nbsp;
 ![](https://main.qcloudimg.com/raw/e7c1115c4420cae8a5847fee50ff93be.png)
 
+## 内网流量日志授权
+1. 登录 [访问管理控制台](https://console.cloud.tencent.com/cam/role)，在左侧导航栏中选择【角色】，进入角色页面。
+2. 在角色页面，单击【新建角色】，选择腾讯云账号，进入新建自定义角色页面。
+![](https://main.qcloudimg.com/raw/86a35d9f4113626a2033c81b04da4314.png)
+3. 在新建自定义角色页面，选择其他主账号，并输入流日志公共账号 91000000202，单击【下一步】。
+![](https://main.qcloudimg.com/raw/b5c75058eca1638f6235c4fe3d872f04.png)
+4. 检索关键字“日志服务”，授权日志服务全读写权限 QcloudCLSFullAccess，单击【下一步】。
+![](https://main.qcloudimg.com/raw/135086865d6ffe88df08ae8046374fa5.png)
+5. 输入角色名称 FlowLogClsRole，单击【完成】，完成新建角色。
+![](https://main.qcloudimg.com/raw/b8cc96ccf8af8850b11128a20f6c5ca9.png)
 
 ## 查看操作日志
-
 1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw)，在左侧导航栏中，选择【日志审计】>【操作日志】，进入“操作日志”页面。
 2. 在“操作日志”页面，可以查看基于该账号内，用户针对安全策略以及开关页所进行的所有操作行为以及操作详情。
 **标签说明：**
