--- a/product/教育/智聆口语评测/离线SDK相关文档/测试申请.md
+++ b/product/教育/智聆口语评测/离线SDK相关文档/测试申请.md
@@ -1,4 +1,4 @@
-﻿### 申请步骤
+### 申请步骤
 1. 在申请离线识别 SDK 前，如您的账号未进行实名认证，需要您先完成实名认证（目前只支持对企业认证的账号开放离线 SDK），并通过审核。
 2. 审核通过后，进入 [语音评测离线 SDK 控制台](https://console.cloud.tencent.com/aiface/sdk) 页面来申请测试，并填写相关申请信息。
 3. 按实际情况填写离线 SDK 申请表，提交后即可获取对应的授权信息进行测试（测试授权数量上限30台）。
