--- a/product/安全服务/网站管家/操作指南/攻击日志新.md
+++ b/product/安全服务/网站管家/操作指南/攻击日志新.md
@@ -1,11 +1,7 @@
 本文为您介绍如何使用攻击日志进行攻击日志索引、快速分析和查询。
 
 ## 背景信息
-Web 应用防火墙默认提供攻击日志，详细记录攻击产生的时间、攻击源IP、攻击类型及攻击详情等信息，攻击日志仅支持查询或导出最近30天日志。
-
-攻击日志支持全文检索、模糊搜索和组合条件搜索等检索方式，同时支持根据检索条件下载日志，支持百万级日志下载。
-
->?如果您需要使用旧版本日志查询功能，请参见 [攻击日志（旧）](https://cloud.tencent.com/document/product/627/39132) 进行处理。
+Web 应用防火墙默认提供攻击日志，详细记录攻击产生的时间、攻击源IP、攻击类型及攻击详情等信息，攻击日志仅支持查询或导出最近30天日志。攻击日志支持全文检索、模糊搜索和组合条件搜索等检索方式，同时支持根据检索条件下载日志，支持百万级日志下载。
 
 ## 操作指南
 
