--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -1,19 +1,92 @@
-## 2021年07月
+混沌演练平台提供控制台方式来支持您自主自助对服务器、云服务进行故障演练，目前平台已上演练动作、演练管理功能。本文以一个演练任务从创建、执行、结束全流程为例，快速开始使用混沌演练平台。
 
-<table >
-<thead>
+## 步骤1：创建演练
+1. 登陆 [混沌演练平台控制台]()，进入**演练管理**页面，单击**新增演练**。
+2. 在弹出框中选择**创建空白场景**或**推荐的经验库模版**。
+3. 跳转到新增演练界面，如果从经验库模版创建则经验信息会自动填充。新增演练需填写基本信息、演练对象配置、全局配置3方面信息：
+	- **基本信息页面**
+<table>
 <tr>
-<th width="20%">动态名称</th>
-<th width="50%">动态描述</th>
- <th width="15%">发布时间</th>  
-<th width="15%">相关文档</th>
+<th>信息项</th>
+<th>说明</th>
 </tr>
-</thead>
-<tbody><tr>
-<td>腾讯云发布前端性能监控产品</td>
-<td >提供一站式前端监控解决方案，并且联动腾讯云应用性能观测实现前后端一体化监控。</td>
- <td>2021-07-06</td> 
-<td><a href="https://cloud.tencent.com/document/product/1464/58130">产品概述</a></td>
+<tr>
+<td>演练名称</td>
+<td>填写演练名称</td>
 </tr>
-</tbody></table>
+<tr>
+<td>演练描述</td>
+<td>填写演练多原因、演练背景、演练时间、演练可能造成的影响等信息</td>
+</tr>
+<tr>
+<td>自定义标签</td>
+<td>有助于演练的查询和统计，输入标签内容敲回车，则会自动保存</td>
+</tr>
+<tr>
+<td>用户组</td>
+<td>用户组是用来管理操作此演练任务的权限</td>
+</tr>
+</table>
+	- **演练对象配置**
+	一次演练任务支持多个动作组，每组动作组包括6类信息，具体操作如下：
+<table>
+<tr>
+<th>信息项</th>
+<th>说明</th>
+</tr>
+<tr>
+<td>动作组名称</td>
+<td>填写动作组名称</td>
+</tr>
+<tr>
+<td>动作组描述</td>
+<td>描述动作组需要实现的内容及效果</td>
+</tr>
+<tr>
+<td>资源类型</td>
+<td>选择资源类型，资源类型包括主机、云服务2类</td>
+</tr>
+<tr>
+<td>对象类型</td>
+<td>如果是资源类型主机将默认为 Linux；如果资源类型时云服务则可选择 CBD、CVM 等云服务</td>
+</tr>
+<tr>
+<td>机器列表</td>
+<td>选择需要进行故障演练的机器，一组动作只能上一个区域</td>
+</tr>
+<tr>
+<td>演习动作</td>
+<td>选择演练动作场景，并给动作配置参数</td>
+</tr>
+</table>
+	- **全局配置**
+	依次按照界面提示配置演练编排、监控指标、护栏策略、演练暂停时长4类信息，具体操作如下：
+<table>
+<tr>
+<th>信息项</th>
+<th>说明</th>
+</tr>
+<tr>
+<td>演练编排</td>
+<td><ol><li>选择执行方式：<b>自动执行</b>或者<b>手动执行</b></li><li>对动作组进行流程编排：<b>顺序执行</b>或<b>阶段执行</b></li></ol></td>
+</tr>
+<tr>
+<td>监控指标</td>
+<td>单击<b>添加监控指标</b>，弹出指标列表，根据需要选择监控指标</td>
+</tr>
+<tr>
+<td>护栏策略</td>
+<td><ol><li>单击<b>添加策略</b>，跳转到云监控增加监控策略，指标添加成功后返回到混沌演练平台将刷新界面</li><li>选择刚才创建的监控策略，设置护栏规则</li></ol></td>
+</tr>
+<tr>
+<td>演练暂停时长</td>
+<td>设置演练开始一段时间未结束就暂停演练，避免问题</td>
+</tr>
+</table>	
+4. 填写完以上信息，单击**提交**则成功创建混沌演练。
 
+## 步骤2：执行演练
+在演练列表中找到某个演练，单击**详情**，跳转演练详情界面，单击**执行演练**。在执行过程中，观察演练监控指标及护栏策略指标，判断是否需要暂停或终止演练。
+
+## 步骤3：结束演练
+所有动作执行结束后，单击**记录演练结论**，查看所记录的演练是否符合预期。
