--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/旅游门户小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/旅游门户小程序模板.md
@@ -2,124 +2,131 @@
 
 本模板是应用于旅游门户的小程序模板，包含了公司介绍，旅游服务介绍，企业新闻等多种功能。
 
-### 功能模块
+## 功能模块
 
-| 模块       | 功能名称                                    | 详细功能清单                                                 |
-| ---------- | ------------------------------------------- | ------------------------------------------------------------ |
-| 管理后台   | 新闻                                        | 新闻新增/查看/编辑/删除     新闻详情                         |
-| 新闻模块   | 新闻模块新增/查看/编辑/删除                 |                                                              |
-| 旅游服务   | 旅游服务新增/查看/编辑/删除    旅游服务详情 |                                                              |
-| 集团介绍   | 集团介绍新增/查看/编辑/删除    集团介绍详情 |                                                              |
-| 首页轮播图 | 轮播图新增/查看/编辑/删除                   |                                                              |
-| 小程序端   | 首页                                        | 轮播图                  公司简介                    旅游服务                  新闻动态 |
-| 旅游服务   | 旅游服务列表             旅游服务详情       |                                                              |
-| 集团新闻   | 集团新闻列表             集团新闻详情       |                                                              |
-| 集团简介   | 集团简介详情                                |                                                              |
+<table>
+   <tr>
+      <th>模块</th>
+			<th>功能名称</th>
+			<th>详细功能清单</th>
+   </tr>
+   <tr>
+      <td rowspan="5">管理后台</td>
+		 <td>新闻</td>
+      <td><li>新闻新增/查看/编辑/删除</li><li>新闻详情</li></td>  
+   </tr>
+	 <tr>
+      <td>新闻模块</td>
+      <td>新闻模块新增/查看/编辑/删除</td>
+   </tr>
+	 	<tr>
+      <td>旅游服务</td>
+      <td><li>旅游服务新增/查看/编辑/删除</li><li>旅游服务详情</li></td>
+   </tr>
+	 <tr>
+      <td>集团介绍</td>
+      <td><li>集团介绍新增/查看/编辑/删除</li><li>集团介绍详情</li></td>
+   </tr>	 
+	 	<tr>
+      <td>首页轮播图</td>
+      <td>轮播图新增/查看/编辑/删除</td>
+   </tr>	
+   <tr>
+      <td rowspan="4">小程序端</td>
+      <td>首页</td>
+      <td><li> 轮播图</li><li>公司简介</li><li>旅游服务</li><li>新闻动态</li></td>
+   </tr> 
+	 	<tr>
+      <td>旅游服务</td>
+      <td><li> 旅游服务列表</li><li>旅游服务详情</li></td>
+   </tr>
+	 	<tr>
+      <td>集团新闻</td>
+      <td><li> 集团新闻列表</li><li>集团新闻详情</li></td>
+   </tr>	 
+	 	 <tr>
+      <td>集团简介</td>
+      <td>集团简介详情</td>
+   </tr>	
+</table>
 
-### 第一步：购买和试用小程序
+## 使用流程
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车服务小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/5a2b4419b1fea12be45c1fc4968d78eb.jpeg)
 
-![img](https://main.qcloudimg.com/raw/400664d19408a1a00dfe96e7fbad37c5.jpeg) 
+### 步骤2：安装模版
 
-### 第二步：安装模版
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
+### 步骤3：小程序店铺装修[](id:step3)
 
-![img](https://main.qcloudimg.com/raw/2be90e728b78ec8bb0f43502163a7c8d.jpeg) 
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-模版安装的应用通过【应用管理】，进入应用详情页
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![](https://main.qcloudimg.com/raw/af3ec8465e4e8233ab10b08993f6999d.jpeg)
 
-![img](https://main.qcloudimg.com/raw/9e783d2fb39efca23148da0b7fee85e3.jpeg) 
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![](https://main.qcloudimg.com/raw/5bcd449768bfd2ae366d6e7c12f1b749.jpeg)
 
-### 第三步： 小程序店铺装修
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![](https://main.qcloudimg.com/raw/60a1b719e26dbfed5761fdce1979d12d.jpeg)
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
-
-装修编辑器整体介绍：
-
-页面管理：可设置所需要的页面；编辑区：可将组件拖拽到编辑区，进行页面布局；预览区：页面实时预览；页面编辑：可设置页面样式
-
-![img](https://main.qcloudimg.com/raw/8c0d5c22f56e1cc40e175192935fa8d5.jpeg) 
-
-组件：官方组件和自定义组件；组件编辑：可设置组件数据绑定、样式、事件等   
-
-![img](https://main.qcloudimg.com/raw/b302ba7683c2f5e42e8cad5316a3fed8.jpeg) 
-
-l 【页面管理】支持切换页面，对所有页面进行个性化装修
-
-l 【编辑区】点击选中要编辑的组件
-
-l 【预览区】可查看页面效果
-
-l 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-
-l 【组件】模版所带组件库，可用于新页面开发
-
-#### 1.  首页轮播图装修
-
-![img](https://main.qcloudimg.com/raw/70833c33177f1495ecf9587d09249afc.jpeg) 
-
-#### 2.  定制新增页面
-
-![img](https://main.qcloudimg.com/raw/b32172f54429e4bad7a502601a00f905.jpeg) 
-
-#### 3.  设置页面跳转![img](https://main.qcloudimg.com/raw/72e135f71b54c08d0671733b0109ecae.jpeg)
-
-#### 4.  定制事件响应
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### 第四步： 创建模型应用
 
-点击“创建空白应用”，选择“模型应用”，点击下一步  
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/67d1bd2e05e09ac751bc09b897e212d1.png)    
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![](https://main.qcloudimg.com/raw/9bc0f4bacad4777532be7fbcfd3c5cef.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/925a43bb58074bab5bd83d210baeea74.png)        
 
-![img](https://main.qcloudimg.com/raw/d66acd07cbdffa44ca144c79f4f4c0ce.jpeg) 
 
-点击“进入应用页面编辑”，进入编辑页面
-
-![img](https://main.qcloudimg.com/raw/cd36e5dadece28951ebaac4394dd15e1.jpeg) 
-
-点击“发布”，选择发布方式，点击下一步  
-
-![img](https://main.qcloudimg.com/raw/99a3cb7903a9445315521824fddb9c35.jpeg) 
-
-发布完成后，点击"访问链接"到管理后台
-
-![img](https://main.qcloudimg.com/raw/6bfbb7f47cbd7c78bf67b3628bd0540e.jpeg) 
-
- 
-
-### 第五步：数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1、 首页信息
+#### 首页信息
+<img src = "https://main.qcloudimg.com/raw/eeae41b3bd6f30a525f24269c0fada76.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/3ff9039ade1bfbf86447df1c66103b5e.jpeg)如果要修改首页信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+如果要修改首页信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/9e05b93d5520b7fba74c7b36ed8b3922.jpeg) 
 
-![img](https://main.qcloudimg.com/raw/c4a1c57c2c837a9ff7cb7db34dc7851e.jpeg) 
+#### 集团介绍
+<img src = "https://main.qcloudimg.com/raw/87bced1ae83f34ca0f4086dc96218ca9.jpeg" style="width: 60%">
 
-2、 集团介绍
+如果要修改集团介绍，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/8f0ec8d430b36c30eac7a93c912ee7bc.jpeg)
 
-![img](https://main.qcloudimg.com/raw/bf95de34fa77a4df6805979fa2e853f5.jpeg)如果要修改集团介绍，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+#### 旅游服务
+<img src = "https://main.qcloudimg.com/raw/ba19cc17407a17c06e20e8a058e81998.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/279aae1c237ccd998b9ab5a347769a41.jpeg) 
+如果要修改旅游服务的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+![](https://main.qcloudimg.com/raw/797343c155aca2a311ca03c227157699.jpeg)
 
-3、 旅游服务
 
-![img](https://main.qcloudimg.com/raw/8f24356d881d713047938d9a2fddd5f2.jpeg)如果要修改旅游服务的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+#### 新闻动态模块与详情
+<img src = "https://main.qcloudimg.com/raw/bc31594c818390a67f5b61a8839ffc4a.jpeg" style="width: 60%">
 
-![img](https://main.qcloudimg.com/raw/2239879b7b5552a9ba70cd50b02c692b.jpeg) 
+如果要修改新闻动态的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/b1d76b268be24a705b6ae1fd09b606ac.jpeg)
+![](https://main.qcloudimg.com/raw/8833ba34ff7b882380d2d3e530266317.jpeg)
 
-4、 新闻动态模块与详情
+### 第六步： 3分钟完成小程序预览或发布
 
-![img](https://main.qcloudimg.com/raw/84a27f88833da05defdf5bcbd3b1f3c4.jpeg)如果要修改新闻动态的内容，在后台数据管理页面中，找到对应的页面，修改信息
-
-![img](https://main.qcloudimg.com/raw/5939b0c29068877ab6b92e72c9b14cac.jpeg) 
-
-![img](https://main.qcloudimg.com/raw/1b329ea6626d9e7917d193a3c766cf58.jpeg) 
-
-### 第六步： 3分钟完成小程序预览/发布
-
-请移步 [小程序发布文档](user_cancel)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
