--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -1,7 +1,7 @@
 混沌演练平台提供控制台方式来支持您自主自助对服务器、云服务进行故障演练，目前平台已上演练动作、演练管理功能。本文以一个演练任务从创建、执行、结束全流程为例，快速开始使用混沌演练平台。
 
 ## 步骤1：创建演练
-1. 登陆 [混沌演练平台控制台]()，进入**演练管理**页面，单击**新增演练**。
+1. 登录 [混沌演练平台控制台]()，进入**演练管理**页面，单击**新增演练**。
 2. 在弹出框中选择**创建空白场景**或**推荐的经验库模版**。
 3. 跳转到新增演练界面，如果从经验库模版创建则经验信息会自动填充。新增演练需填写基本信息、演练对象配置、全局配置3方面信息：
 	- **基本信息页面**
