--- a/product/监控与管理/混沌演练平台/产品动态.md
+++ b/product/监控与管理/混沌演练平台/产品动态.md
@@ -1,4 +1,4 @@
-## 2021年07月
+## 2021年09月
 
 <table >
 <thead>
@@ -10,9 +10,9 @@
 </tr>
 </thead>
 <tbody><tr>
-<td>腾讯云发布前端性能监控产品</td>
+<td>腾讯云发布混沌演练平台产品</td>
 <td >提供一站式前端监控解决方案，并且联动腾讯云应用性能观测实现前后端一体化监控。</td>
- <td>2021-07-06</td> 
+ <td>2021-09-17</td> 
 <td><a href="https://cloud.tencent.com/document/product/1464/58130">产品概述</a></td>
 </tr>
 </tbody></table>
