--- a/product/监控与管理/混沌演练平台/产品简介/产品概述.md
+++ b/product/监控与管理/混沌演练平台/产品简介/产品概述.md
@@ -8,10 +8,10 @@
 ## 相关概念
 
 ### 动作
-一个执行原子操作，比如 CVM 关机，Mysql 主从切换。
+一个执行原子操作，例如 CVM 关机，Mysql 主从切换。
 
 ### 演练对象
-动作作用的对象，比如 CVM，Mysql。
+动作作用的对象，例如 CVM，Mysql。
 
 ### 动作组
 是动作的集合，动作组里动作的操作对象是同一批。
