--- a/product/数据库/图数据库EasyGraph/图数据管理/图数据管理概述.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图数据管理概述.md
@@ -31,8 +31,15 @@
 
 内置案例，提供数种常见的图数据分析场景（包含点边数据），了解和试用图可视化渲染分析能力，便于初步接触和学习。
 - 图分析 - 图数据查询
+	- 新建图数据查询
+![](https://main.qcloudimg.com/raw/a5e0103fc8894b9f2a69cbab82c6fc83.png)
+	- 图数据查询页面
 ![](https://main.qcloudimg.com/raw/22fe497db69658078a62613f49baebc5.png)
 - 图分析 - 图数据分析
-- 图分析-内置案例
+	- 新建图数据分析
+![](https://main.qcloudimg.com/raw/0b867c73d8bf7442463eb9812e4dc797.png)
+- 图分析 - 内置案例
+	- 新建内置案例
+![](https://main.qcloudimg.com/raw/8ea1858b71ea36d17577ec897778bc79.png)
+	- 内置案例页面
 ![](https://main.qcloudimg.com/raw/5492de46e35e8314894cfd6293952c61.png)
-
