修改单链接限速格式

--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/对象操作.md
@@ -16,7 +16,6 @@
 | [DELETE Object](https://cloud.tencent.com/document/product/436/7743) | 删除单个对象             | 在存储桶中删除指定对象                         |
 | [DELETE Multiple Objects](https://cloud.tencent.com/document/product/436/8289) | 删除多个对象             | 在存储桶中批量删除对象                         |
 | [POST Object restore](https://cloud.tencent.com/document/product/436/12633) | 恢复归档对象             | 将归档类型的对象取回访问                       |
-| [单链接限速](https://cloud.tencent.com/document/product/436/40140) | 单链接限速             | 上传下载文件时进行流量控制                       |
 
 
 **分块操作**
@@ -378,6 +377,24 @@ try {
 }
 ```
 
+#### 示例六：上传对象（单链接限速）
+>?关于上传对象的限速说明，请参见 [单链接限速](https://cloud.tencent.com/document/product/436/40140)。
+
+```php
+try {
+$result = $cosClient->putObject(array(
+        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Key' => 'exampleobject',
+        'Body' => fopen($local_path, 'rb'),
+        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
+    ));
+    // 请求成功
+    print_r($result);
+} catch (\Exception $e) {
+    // 请求失败
+    echo($e);
+}
+```
 #### 参数说明
 
 | 参数名称             | 类型        | 描述                                                         | 是否必填 |
@@ -682,6 +699,25 @@ try {
         'Key' => 'exampleobject',
         'VersionId' => 'exampleVersionId'
     )); 
+    // 请求成功
+    print_r($result);
+} catch (\Exception $e) {
+    // 请求失败
+    echo($e);
+}
+```
+
+#### 示例四：下载文件（单链接限速）
+>?关于下载对象的限速说明，请参见 [单链接限速](https://cloud.tencent.com/document/product/436/40140)。
+
+```php
+try {
+   $result = $cosClient->getObject(array(
+        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
+        'Key' => 'exampleobject',
+        'SaveAs' => '/data/exampleobject',
+        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
+    ));
     // 请求成功
     print_r($result);
 } catch (\Exception $e) {
@@ -1087,48 +1123,6 @@ try {
 | Days             | String | 设置临时副本的过期时间，单位(天)                             | 是       |
 | CASJobParameters | Array  | 恢复信息                                                     | 是       |
 | Tier             | String | 恢复归档存储类型的数据时，Tier 可以指定为 COS 支持的三种恢复模式，分别为 Expedited、Standard、Bulk。恢复深度归档存储类型的数据时，Tier 可以指定为 COS 支持的两种恢复模式，分别为 Standard、Bulk。 | 是       |
-
-### 单链接限速
-
-#### 功能说明
-本文档提供关于调用上传下载接口时对链接进行限速。
-
-#### 使用说明
-限速值设置范围为 819200 - 838860800，单位默认为 bit/s，即100KB/s - 100MB/s，如果超出该范围将返回400错误。
-
-#### 示例一：上传时对单链接限速
-```php
-try {
-$result = $cosClient->putObject(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
-        'Key' => 'exampleobject',
-        'Body' => fopen($local_path, 'rb'),
-        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
-    ));
-    // 请求成功
-    print_r($result);
-} catch (\Exception $e) {
-    // 请求失败
-    echo($e);
-}
-```
-
-#### 示例二：下载时对单链接限速
-```php
-try {
-   $result = $cosClient->getObject(array(
-        'Bucket' => 'examplebucket-125000000', //格式：BucketName-APPID
-        'Key' => 'exampleobject',
-        'SaveAs' => '/data/exampleobject',
-        'TrafficLimit' => 8 * 1024 * 1024 // 限制为1MB/s
-    ));
-    // 请求成功
-    print_r($result);
-} catch (\Exception $e) {
-    // 请求失败
-    echo($e);
-}
-```
 
 ## 分块操作
 
