--- a/product/视频服务/点播/播放器 SDK 手册/基本概念.md
+++ b/product/视频服务/点播/播放器 SDK 手册/基本概念.md
@@ -5,14 +5,13 @@
 ## 如何选择播放器
 [](id:choosePlayer)
 为了便于用户的接入、耦合用户场景和减少用户的集成难度，云点播建议用户在接入播放器时，选择最合适自己的播放器类型接入：
-![image](https://user-images.githubusercontent.com/28837844/133234888-c6a86182-2181-4362-af3c-c84f4346d673.png)
+![](https://main.qcloudimg.com/raw/df2eb125900cd9c28563a212dd744aab.png)
 
 - **超级播放器**：适用于通过云点播播放器搭建视频播放服务的用户，该播放器功能全面，为用户提供了云端一体的视频播放体验服务。
-- **超级播放器 Adapter**: 适用于已经选择其他播放器，但仍需要使用云点播能力的客户，云点播提供超级播放器 Adapter 帮助客户顺利接入点播资源的使用。
-
-  > 注：
-  > 仅通过Fileid播放的视频拥有腾讯云点播提供的多维度的数据统计，用量统计和多种统计分析能力
-  > 通过URL播放的视频，不具备云点播的部分数据统计能力
+- **超级播放器 Adapter**：适用于已经选择其他播放器，但仍需要使用云点播能力的客户，云点播提供超级播放器 Adapter 帮助客户顺利接入点播资源的使用。
+>?
+>-  仅通过 Fileid 播放的视频拥有腾讯云点播提供的多维度的数据统计，用量统计和多种统计分析能力。
+>- 通过 URL 播放的视频，不具备云点播的部分数据统计能力
 
 各类型播放器支持的平台端类型如下：
 
