--- a/product/计算与网络/批量计算/快速入门/控制台快速开始.md
+++ b/product/计算与网络/批量计算/快速入门/控制台快速开始.md
@@ -21,7 +21,7 @@
  - **镜像**：请按需选择。
  - **资源数量**：例如1台。
  - **超时时间、重试次数**：保持默认值。
-3. 单击【下一步】，配置程序信息。如下图所示：
+3. 单击**下一步**，配置程序信息。如下图所示：
 ![](https://main.qcloudimg.com/raw/c114524a017612f42ac4469209640717.png)
  - **执行方式**：选择 “Local”。
  - **Stdout日志**：格式参考 [COS、CFS路径填写](https://cloud.tencent.com/document/product/599/13996)。
@@ -43,7 +43,7 @@
  - **描述**：自定义描述，例如 hello demo。
 3. 选中“任务流”左侧 “hello” 任务，移动鼠标将任务放置到右侧画布中。如下图所示：
 ![](https://main.qcloudimg.com/raw/1c0f1b3c61d91116266df65cba646e83.png)
-4. 在“任务流”右侧“任务详情”，确认配置无误后，单击【完成】。
+4. 在“任务流”右侧“任务详情”，确认配置无误后，单击**完成**。
 5. 您可以在“作业”列表页查看作业的运行状态。如下图所示：
 ![](https://main.qcloudimg.com/raw/56222552b1be6bb85cc80f222dca6092.png)
  - 单击作业 ID，在**任务运行情况**页签下，可查看到个任务实例的运行状态。
