--- a/product/数据库/图数据库EasyGraph/产品简介/产品架构.md
+++ b/product/数据库/图数据库EasyGraph/产品简介/产品架构.md
@@ -5,7 +5,7 @@
 图数据库 KonisGraph 为分布式集群，同时采用计算存储分离架构，分为计算节点和数据节点。
 
 #### 计算节点
-计算节点的主要功能：提供标准的 Gremlin Server 接口，供各种 Gremlin Client 调用；Gremlin 语言到 Dataflow 执行计划的编译及优化；实时写入数据的入口。用户可以按业务实际需要选用合适的计算节点规格和数量。
+计算节点的主要功能：提供标准的 Gremlin Server 接口，供各种 Gremlin Client 调用。用户可以按业务实际需要选用合适的计算节点规格和数量。
 
 #### 数据节点
 数据节点为分布式图数据存储，提供实时写入、批量导入和数据查询。用户可以按需选择适合的数据容量。
