--- a/product/数据库/图数据库EasyGraph/产品简介/产品架构.md
+++ b/product/数据库/图数据库EasyGraph/产品简介/产品架构.md
@@ -15,7 +15,7 @@
 - 分布式高可用。
 - 支持数据完整性和一致性。
 - 支持 Gremlin 标准图数据库查询语言。
-- 水平扩展：计算层、存储层支持水平扩展，以支持从单机小图到千亿级别边的超大规模图数据。
+- 水平扩展：计算层、存储层支持水平扩展，以支持从单机小图到万亿级别边的超大规模图数据。
 - 查询低时延和高并发，Latency 和 QPS 满足实时查询需求。
 
 - 解决超级顶点问题。
