--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -105,7 +105,7 @@
 
 |计费模式	|描述	|付费方式	|计费规则|	计费详情|
 |-------|-------|------|------|-----|
-|QUIC |请求数计费|	若您已使用 QUIC 访问功能，将按 QUIC 请求数次数计费。	|后付费月度结算</br>**注**：月结客户|无阶梯一口价	|参见 [计费详情](#m7)|
+|QUIC 请求数计费|	若您已使用 QUIC 访问功能，将按 QUIC 请求数次数计费。	|后付费月度结算</br>**注**：月结客户|无阶梯一口价	|参见 [计费详情](#m7)|
 
 
 ### 大客户计费方式说明
