--- a/product/移动与通信/应用服务平台/产品动态.md
+++ b/product/移动与通信/应用服务平台/产品动态.md
@@ -12,7 +12,7 @@
 <tbody>
 <tr>
 <td>日志查询及检索</td>
-<td>支持快速查询服务调用日志，并支持高级检索。
+<td>云函数支持快速查询服务调用日志，并支持高级检索。
 </td>
 <td>2021-08-20</td>
 <td><a href="https://cloud.tencent.com/document/product/876/19359">云函数日志</a></td>
@@ -50,7 +50,7 @@
 <tbody>
 <tr>
 <td>日志服务能力优化</td>
-<td>支持绑定公有云日志服务 CLS，支持仪表盘、日志告警等高级能力。
+<td>日志管理支持绑定公有云日志服务 CLS，支持仪表盘、日志告警等高级能力。
 </td>
 <td>2021-08-25</td>
 <td><a href="https://docs.cloudbase.net/logger/cls">日志管理</a></td>
