--- a/product/企业协同/设计协作平台/快速入门.md
+++ b/product/企业协同/设计协作平台/快速入门.md
@@ -22,6 +22,6 @@
 ## 后续步骤
 
 - [创建项目](https://cloud.tencent.com/document/product/1336/49419)
-- [创建图标库](https://cloud.tencent.com/document/product/1336/49420)
+- [账号设置](https://cloud.tencent.com/document/product/1336/49421)
 
 
