--- a/product/计算与网络/无服务器云函数/操作指南/触发器管理/创建触发器.md
+++ b/product/计算与网络/无服务器云函数/操作指南/触发器管理/创建触发器.md
@@ -18,7 +18,7 @@
 例如：定时触发器需添加触发器名称、周期和启用情况，对象存储 COS 触发器需要添加触发的 COS Bucket、事件类型以及前后缀过滤方式。
 >? 更加具体的触发器相关填写内容说明，可见各 [触发器](https://cloud.tencent.com/document/product/583/9705) 的说明文档。
 7. 完成触发器配置后，单击**提交**，完成触发器创建。
->? 如需取消创建过程，单击**取消**即可。
+>? 如需取消创建过程，单击**关闭**即可。
 
 
 
