--- a/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
+++ b/product/视频服务/点播/播放器 SDK 手册/播放器综述.md
@@ -1,8 +1,8 @@
 ## 产品说明
-腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云为用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 为点播播放场景提供 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，用户可以根据自己的需求集成 [播放器 Player SDK](https://cloud.tencent.com/document/product/266/61438) 或参考腾讯云点播超级播放器在短时间内打造出流畅的观看体验，同时云点播提供集多功能于一体的高性能解决方案助力用户迅速打造高质量终端服务。
+腾讯云视立方播放器 Player （以下简称播放器 Player）是腾讯云提供给用户连接云端服务、打造云端一体化的重要组成部分，播放器 Player 在点播播放场景提供了超级播放器和超级播放器 Adapter 两种接入方式，同时支持 Web 端、iOS 端、Android 端、Flutter 端等多平台视频点播能力，帮助用户在短时间内打造出流畅、稳定的观看体验。云点播也提供多种视频播放解决方案，赋能客户的不同场景。
 
 ## 快速了解
-为了解决用户在使用播放器 Player SDK 接入复杂，版本众多，文档繁杂的问题，点播播放提供了超级播放器帮助客户理解和接入视频点播服务，在正式使用腾讯云视立方播放器 Player  前，建议所有客户首先阅读超级播放器的 [基本概念](https://cloud.tencent.com/document/product/266/61437) 和 [如何选择点播播放器](https://cloud.tencent.com/document/product/266/61437#choosePlayer) 选择适合自己的播放器类型。
+为了解决用户在使用播放器 Player 接入复杂，版本众多，文档繁杂的问题，在正式使用超级播放器和超级播放器 Adapter 前，建议所有客户首先阅读播放器的 [基本概念](https://cloud.tencent.com/document/product/266/61437) 和 [如何选择点播播放器](https://cloud.tencent.com/document/product/266/61437#choosePlayer) 选择适合自己的播放器类型。
 
 ## 核心优势
 ### 云端一体化服务
