--- a/product/计算与网络/无服务器云函数/操作指南/函数管理/查询函数.md
+++ b/product/计算与网络/无服务器云函数/操作指南/函数管理/查询函数.md
@@ -10,6 +10,7 @@
  - **触发管理页**：展示函数已配置触发器，并可以通过此页面创建触发器。
  - **监控信息页**：显示函数运行监控信息。
  - **日志查询页**：显示函数运行日志，并可以根据一定条件过滤展示日志。
+ - **并发配额页**：展示函数的并发额度，可以通过此页面设定函数最大独占配额和预置并发。
 
 
 ## 通过 Serverless Framework CLI 命令行获取部署信息
