--- a/product/视频服务/点播/播放器 SDK 手册/SDK 下载/功能说明.md
+++ b/product/视频服务/点播/播放器 SDK 手册/SDK 下载/功能说明.md
@@ -1,4 +1,5 @@
 [](id:functionList)
+## 超级播放器
 超级播放器在各端上都提供丰富的能力接入，各平台支持的能力列表展示如下：
 
 | 功能点         | 功能说明                                               | iOS & Android | Web |
@@ -44,3 +45,21 @@
 | 播放回调        | 支持对播放状态回调、首帧回调、播放完成或失败回调                           | ✓             | ✓   |
 | 支持 HTTPS    | 支持播放 HTTPS 的视频资源                                   | ✓             | ✓   |
 | 自定义 HTTP 头部 | 请求视频资源时，自定义 HTTP Headers 内容                        | ✓             | \-  |
+
+[](id:Adapter)
+## 超级播放器 Adapter
+超级播放器 Adapter 在各端上都提供丰富的能力接入，各平台支持的能力列表展示如下：
+
+| 功能点      | 功能说明                                         | iOS/Android | Web |
+| -------- | -------------------------------------------- | ----------- | --- |
+| QUIC 协议   | 支持 QUIC 协议                                     | ×           | √   |
+| FileID播放 | 支持使用云点播的 FileId 方式播放                         | √           | √   |
+| 清晰度切换    | 支持用户流畅无卡顿的切换多路清晰度流                           | √           | √   |
+| 清晰度命名    | 支持为不同清晰度流进行自定义命名                             | √           | √   |
+| 进度条标记    | 支持在进度条上添加标记信息                                | √           | √   |
+| 缩略图预览    | 支持在进度条上展示缩略图（雪碧图）做预览                         | √           | √   |
+| 设置封面     | 支持设置播放视频的封面                                  | √           | √   |
+| HLS 加密    | 支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密。  | √           | √   |
+| 私有协议加密   | 支持在云端通过私有协议对视频进行加密，且仅能通过播放器 SDK 对加密后的视频进行解密播放。 | √           | √   |
+| 离线下载     | 支持离线下载加密视频后，仅可通过播放器 SDK 对视频进行解密播放。             | √           | √   |
+| 数据统计     | 支持统计视频播放的各类行为、异常数据，提供异常分析，日志报表               | ×           | √   |
