--- a/product/视频服务/点播/播放器 SDK 手册/SDK 下载/功能说明.md
+++ b/product/视频服务/点播/播放器 SDK 手册/SDK 下载/功能说明.md
@@ -39,9 +39,9 @@
 | 边下边播        | 支持视频播放的同时缓存下载后面的内容                                 | ✓             | ✓   |
 | Referer 防盗链 | 支持通过播放请求中携带的 Referer 字段识别请求的来源，以黑名单或白名单方式对来源请求进行控制 | ✓             | ✓   |
 | Key 防盗链     | 支持在播放链接中加入控制参数，控制链接的有效时间、试看时长、允许播放的 IP 数等          | ✓             | ✓   |
-| HLS 加密      | 支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密。        | ✓             | ✓   |
-| 私有协议加密      | 支持在云端通过私有协议对视频进行加密，且仅能通过播放器 SDK 对加密后的视频进行解密播放。     | ✓             | ✓   |
-| 离线下载        | 支持离线下载加密视频后，仅可通过播放器 SDK 对视频进行解密播放。                 | ✓             | \-  |
+| HLS 加密      | 支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密       | ✓             | ✓   |
+| 私有协议加密      | 支持在云端通过私有协议对视频进行加密，且仅能通过播放器 SDK 对加密后的视频进行解密播放     | ✓             | ✓   |
+| 离线下载        | 支持离线下载加密视频后，仅可通过播放器 SDK 对视频进行解密播放                 | ✓             | \-  |
 | 播放回调        | 支持对播放状态回调、首帧回调、播放完成或失败回调                           | ✓             | ✓   |
 | 支持 HTTPS    | 支持播放 HTTPS 的视频资源                                   | ✓             | ✓   |
 | 自定义 HTTP 头部 | 请求视频资源时，自定义 HTTP Headers 内容                        | ✓             | \-  |
@@ -59,7 +59,7 @@
 | 进度条标记    | 支持在进度条上添加标记信息                                | √           | √   |
 | 缩略图预览    | 支持在进度条上展示缩略图（雪碧图）做预览                         | √           | √   |
 | 设置封面     | 支持设置播放视频的封面                                  | √           | √   |
-| HLS 加密    | 支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密。  | √           | √   |
-| 私有协议加密   | 支持在云端通过私有协议对视频进行加密，且仅能通过播放器 SDK 对加密后的视频进行解密播放。 | √           | √   |
-| 离线下载     | 支持离线下载加密视频后，仅可通过播放器 SDK 对视频进行解密播放。             | √           | √   |
+| HLS 加密    | 支持基于 HLS 提供的 AES encryption 方案，使用密钥对视频数据加密  | √           | √   |
+| 私有协议加密   | 支持在云端通过私有协议对视频进行加密，且仅能通过播放器 SDK 对加密后的视频进行解密播放 | √           | √   |
+| 离线下载     | 支持离线下载加密视频后，仅可通过播放器 SDK 对视频进行解密播放             | √           | √   |
 | 数据统计     | 支持统计视频播放的各类行为、异常数据，提供异常分析，日志报表               | ×           | √   |
