--- a/product/数据库/云数据库 CynosDB/购买指南/计费概述.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/计费概述.md
@@ -1,5 +1,5 @@
-## 云原生数据库 TDSQL-C（兼容 MySQL 版）
-云原生数据库 TDSQL-C（兼容 MySQL 版）提供如下三种计费模式：
+## TDSQL-C for MySQL
+TDSQL-C for MySQL 提供如下三种计费模式：
 
 | 计费模式 | 付费模式 |  适用场景 | 
 |---------|---------|---------|
@@ -12,7 +12,7 @@
 
 **Serverless 总费用 = 计算节点费用 + 存储空间费用 = Serverless 算力价格 × CCU 量 + 存储空间价格 × 存储空间**
 
-云原生数据库 TDSQL-C 采用计算和存储分离的架构，最小购买单位为集群，每个集群的计算节点和存储空间单独计费：
+TDSQL-C for MySQL 采用计算和存储分离的架构，最小购买单位为集群，每个集群的计算节点和存储空间单独计费：
 - 计算节点费用根据用户所购买的规格按计费模式计费，支持包年包月和按量计费。
 - 存储空间费用根据用户所购买的存储空间按计费模式计费，支持包年包月和按量计费。
 >?仅选择计算节点为包年包月计费模式时，存储空间才能选择包年包月计费模式。
@@ -116,8 +116,8 @@
 每天的存储空间费用 = 0.00485元/GB/小时 × 10GB × 24小时 = 1.1664元
 每天的总费用 = 计算节点费用 + 存储空间费用 = 20.52元 + 1.1664元 =21.6864元
 
-## 云原生数据库 TDSQL-C（兼容 PostgreSQL 版）
-云原生数据库 TDSQL-C（兼容 PostgreSQL 版）目前正在内测期间，您可通过 [TDSQL-C 申请页](https://cloud.tencent.com/apply/p/muwset44i0l) 进行内测申请，申请通过的用户将收到站内信和短信通知。
+## TDSQL-C for PostgreSQL
+TDSQL-C for PostgreSQL 目前正在内测期间，您可通过 [TDSQL-C 申请页](https://cloud.tencent.com/apply/p/muwset44i0l) 进行内测申请，申请通过的用户将收到站内信和短信通知。
 >?
 >- 申请单提交后，7个工作日内如果审批通过，将有相关的工作人员与您联系，请确保您的联系方式正确并且通畅。
 >- 内测期间产品和功能免费，资源有限请合理设置资源数量和测试时间，测试完毕如无需要请释放资源。
