--- a/product/监控与管理/混沌演练平台/产品动态.md
+++ b/product/监控与管理/混沌演练平台/产品动态.md
@@ -11,7 +11,7 @@
 </thead>
 <tbody><tr>
 <td>腾讯云发布混沌演练平台产品</td>
-<td >提供一站式前端监控解决方案，并且联动腾讯云应用性能观测实现前后端一体化监控。</td>
+<td>混沌演练平台是自动化故障注入工具平台，支持观测指标可视化，安全护栏等功能，帮助用户及时发现业务潜在风险和验证高可用预案有效性。</td>
  <td>2021-09-17</td> 
 <td><a href="https://cloud.tencent.com/document/product/1500/61442">产品概述</a></td>
 </tr>
