--- a/product/监控与管理/混沌演练平台/产品简介/应用场景.md
+++ b/product/监控与管理/混沌演练平台/产品简介/应用场景.md
@@ -1,7 +1,7 @@
-### 服务自治能力验证
-在多机部署的服务架构场景中，现网机器因为各种原因出现异常较为常见，为了验证架构的异常自治能力，可以对现网CVM进行各类不同的异常注入模拟，从而可发现新的问题或验证可用性方案的有效性。
-![](https://main.qcloudimg.com/raw/855937c0e873cf2a1e30b534da8bb479.png)
+## 服务自治能力验证
+混沌演练平台在多机部署的服务架构场景中，现网机器因为各种原因出现异常较为常见，为了验证架构的异常自治能力，可以对现网 CVM 进行各类不同的异常注入模拟，从而可发现新的问题或验证可用性方案的有效性。
+![](https://main.qcloudimg.com/raw/8480e6036979ee77931970c9504f0ba9.jpg)
 
-### 同城异地多活演练
-为了增强面对重大机房或网络异常的场景下，保障业务连续服务、数据可靠性的信心能力，可从接入层，逻辑层，到数据层进行可用区级别的异常不可用进行故障模拟。
-![](https://main.qcloudimg.com/raw/17388bfda73cad234750d36625f339ac.png)
+## 同城异地多活演练
+混沌演练平台面对重大机房或网络异常的场景下，增强保障业务连续服务和数据可靠性的能力，可从接入层，逻辑层，到数据层的可用区级别异常不可用进行故障模拟。
+![](https://main.qcloudimg.com/raw/14343f793884ad1ce662a8bbcfecb82b.jpg)
