--- a/product/监控与管理/混沌演练平台/常见问题.md
+++ b/product/监控与管理/混沌演练平台/常见问题.md
@@ -1,14 +1,19 @@
-### 什么是故障演练平台？
-故障演练平台是自动化故障注入工具平台，支持观测指标可视化，安全护栏等，帮助用户及时发现业务潜在风险、验证高可用预案有效性。
+[](id:que1)
+### 什么是混沌演练平台？
+混沌演练平台是自动化故障注入工具平台，支持观测指标可视化，安全护栏等，帮助用户及时发现业务潜在风险并验证高可用预案的有效性。
 
-### 如何使用故障演练平台？
-您可以在控制台界面定义演习的内容和执行，详情请参见 快速入门。
+[](id:que2)
+### 如何使用混沌演练平台？
+您可以在控制台界面定义演习的内容和执行，详情请参见 [快速入门](https://cloud.tencent.com/document/product/1500/61446)。
 
+[](id:que3)
 ### 平台支持哪些类型操作？
-腾讯云CVM，Mysql，Redis等异常动作注入，具体见 动作库列表。
+混沌演练平台支持腾讯云 CVM，Mysql，Redis 等异常动作注入。
 
+[](id:que4)
 ### 找不到相关演练对象？
 确认地域是否已经选择正确。对象选择逻辑为先选定地域，再根据地域获取相应对象列表。
 
+[](id:que5)
 ### 可以修改已创建的任务信息吗？
 部分可以，但前提是任务未开始执行，如果任务已经开始执行，不允许修改相关内容。
