--- a/product/监控与管理/混沌演练平台/快速入门.md
+++ b/product/监控与管理/混沌演练平台/快速入门.md
@@ -1,7 +1,7 @@
-混沌演练平台提供控制台方式来支持您自主自助对服务器、云服务进行故障演练，目前平台已上演练动作、演练管理功能。本文以一个演练任务从创建、执行、结束全流程为例，快速开始使用混沌演练平台。
+混沌演练平台提供控制台方式来支持您自主自助对服务器、云服务进行故障演练，目前平台已支持演练动作和演练管理功能。本文以一个演练任务从创建、执行和结束全流程为例，快速开始使用混沌演练平台。
 
-## 步骤1：创建演练
-1. 登录 [混沌演练平台控制台]()，进入**演练管理**页面，单击**新增演练**。
+## 步骤1：创建演练[](id:step1)
+1. 登录 [混沌演练平台控制台](https://console.cloud.tencent.com/product/cfg)，进入**演练管理**页面，单击**新增演练**。
 2. 在弹出框中选择**创建空白场景**或**推荐的经验库模版**。
 3. 跳转到新增演练界面，如果从经验库模版创建则经验信息会自动填充。新增演练需填写基本信息、演练对象配置、全局配置3方面信息：
 	- **基本信息页面**
@@ -48,7 +48,7 @@
 </tr>
 <tr>
 <td>对象类型</td>
-<td>如果是资源类型主机将默认为 Linux；如果资源类型时云服务则可选择 CBD、CVM 等云服务</td>
+<td><ul><li>如果对象类型是资源类型，主机将默认为 Linux</li><li>如果资源类型是云服务则可选择 CBD、CVM 等云服务</li></ul></td>
 </tr>
 <tr>
 <td>机器列表</td>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 <td>演练编排</td>
-<td><ol><li>选择执行方式：<b>自动执行</b>或者<b>手动执行</b></li><li>对动作组进行流程编排：<b>顺序执行</b>或<b>阶段执行</b></li></ol></td>
+<td>1. 选择执行方式：<b>自动执行</b>或者<b>手动执行</b><br>2. 对动作组进行流程编排：<b>顺序执行</b>或<b>阶段执行</b></li></ol></td>
 </tr>
 <tr>
 <td>监控指标</td>
@@ -76,7 +76,7 @@
 </tr>
 <tr>
 <td>护栏策略</td>
-<td><ol><li>单击<b>添加策略</b>，跳转到云监控增加监控策略，指标添加成功后返回到混沌演练平台将刷新界面</li><li>选择刚才创建的监控策略，设置护栏规则</li></ol></td>
+<td>1. 单击<b>添加策略</b>，跳转到云监控增加监控策略，指标添加成功后返回到混沌演练平台将刷新界面<br>2. 选择刚才创建的监控策略，设置护栏规则</td>
 </tr>
 <tr>
 <td>演练暂停时长</td>
@@ -86,7 +86,7 @@
 4. 填写完以上信息，单击**提交**则成功创建混沌演练。
 
 ## 步骤2：执行演练
-在演练列表中找到某个演练，单击**详情**，跳转演练详情界面，单击**执行演练**。在执行过程中，观察演练监控指标及护栏策略指标，判断是否需要暂停或终止演练。
+在演练列表中找到 [步骤1](#step1) 中新创建的演练，单击**详情**，跳转演练详情界面，单击**执行演练**。在执行过程中，观察演练监控指标及护栏策略指标，判断是否需要暂停或终止演练。
 
 ## 步骤3：结束演练
 所有动作执行结束后，单击**记录演练结论**，查看所记录的演练是否符合预期。
