更新图片审核描述

--- a/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/PHP SDK/内容审核/图片审核.md
@@ -27,7 +27,7 @@ try {
     //存储桶图片审核
     $result = $cosClient->getObjectSensitiveContentRecognition(array(
         'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
-        'Key' => 'exampleobject', 
+        'Key' => '/pic/test.png', //待审核图片对象路径,如/pic/test.png
         'DetectType' => 'porn,politics' //可选四种参数：porn,politics,terrorist,ads，可使用多种规则，注意规则间不要加空格
 //      'Interval' => 5, // 审核gif时使用 截帧的间隔
 //      'MaxFrames' => 5, // 针对 GIF 动图审核的最大截帧数量，需大于0。
@@ -45,12 +45,12 @@ try {
 ```php
 try {
     //图片链接审核
-    $imgUrl = 'https://test.jpg';
+    $imgUrl = 'https://example.com/test.jpg';
     $result = $cosClient->getObjectSensitiveContentRecognition(array(
         'Bucket' => 'examplebucket-1250000000', //格式：BucketName-APPID
-        'Key' => '/', // 链接图片资源路径写 / 即可
+        'Key' => '/', // 审核图片URL示例中Key并不会被检测，写 / 填充位置即可
         'DetectType' => 'porn,ads',//可选四种参数：porn,politics,terrorist,ads，可使用多种规则，注意规则间不要加空格
-        'DetectUrl' => $imgUrl,
+        'DetectUrl' => $imgUrl, //待审核图片的URL
 //      'Interval' => 5, // 审核gif时使用 截帧的间隔
 //      'MaxFrames' => 5, // 针对 GIF 动图审核的最大截帧数量，需大于0
 //      'BizType' => '', // 审核策略
