--- a/product/大数据与AI/AI加速服务/接入指引.md
+++ b/product/大数据与AI/AI加速服务/接入指引.md
@@ -6,7 +6,7 @@
 
 ### 第2步：线上申请
 
-进入AI加速服务产品介绍页面，单击 **[立即申请](https://cloud.tencent.com/apply/p/ubiom6c4rj)**，填写需求申请单，填写完成后，单击**提交**，完成线上申请。
+进入 AI 加速服务产品介绍页面，单击 **[立即申请](https://cloud.tencent.com/apply/p/vl6fzemdq1)**，填写需求申请单，填写完成后，单击**提交**，完成线上申请。
 
 ### 第3步：申请审核
 
