--- a/product/大数据与AI/AI加速服务/常见问题.md
+++ b/product/大数据与AI/AI加速服务/常见问题.md
@@ -6,9 +6,9 @@ AI 模型训练加速、AI 模型推理加速。
 
 如下使用场景可以使用 AI 加速服务能力：
 - 场景一：AI 模型训练加速
-在推荐、CV、NLP 等模型训练场景中，实现计算优化、通信优化、并行训练、显存优化等功能，帮助客户在进行模型训练时，显著节省训练时间和计算成本。
+TI-ACC 在推荐、CV、NLP 等模型训练场景中，实现计算优化、通信优化、并行训练、显存优化等功能，帮助客户在进行模型训练时，显著节省训练时间和计算成本。
 - 场景二：AI 模型推理加速
-在推荐、CV、NLP 等模型推理场景中，实现通用模型转换、深层性能优化、低精度加速等功能，帮助客户在进行模型推理时，显著降低推理时延和计算成本。
+TI-ACC 在推荐、CV、NLP 等模型推理场景中，实现通用模型转换、深层性能优化、低精度加速等功能，帮助客户在进行模型推理时，显著降低推理时延和计算成本。
 
 ### AI 推理加速服务支持的硬件平台？
 
