--- a/product/视频服务/实时音视频/产品简介/产品功能.md
+++ b/product/视频服务/实时音视频/产品简介/产品功能.md
@@ -55,7 +55,7 @@
 | 跨房 PK        | 也称作“跨直播间 PK”，多个主播跨房间互动 PK，观众观看。       | 秀场直播、PK 连麦、跨房授课等。                              | 使用跨房 PK 功能将产生基础服务用量，需支付 [基础服务费用](https://cloud.tencent.com/document/product/647/17157#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1)。 |
 | 屏幕分享       | 又称屏幕共享，支持将本地电脑桌面、窗口、画面区域分享给他人，例如 Microsoft PowerPoint 播放 PPT 的窗口。 | 在线课堂、PPT 共享、远程协助等。                               | 使用屏幕分享功能将产生基础服务用量，需支付 [基础服务费用](https://cloud.tencent.com/document/product/647/17157#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1)。 |
 | 云端录制       | 采用旁路推流的方式使用 [云直播](https://cloud.tencent.com/document/product/267) 的能力为您提供全程的云端录制功能（即录音/录像），并将录制下来的文件存储到 [云点播](https://cloud.tencent.com/document/product/266) 平台，保证录制过程的可靠性和实时性。 | 双录、存档、合规等。                                         | 云端录制属于增值服务，需额外支付 [云端录制费用](https://cloud.tencent.com/document/product/647/45892)。 |
-| 服务端本地录制 | 支持自有服务端录制（即录音/录像），如需使用请 [联系我们](https://cloud.tencent.com/act/event/connect-service) 获取 SDK 及相关指引。 | 双录、存档、合规等。                                         | 使用服务端本地录制功能将产生基础服务用量，需支付 [基础服务费用](https://cloud.tencent.com/document/product/647/17157#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1)。 |
+| 服务端本地录制 | 服务端录制需要使用 Linux SDK。Linux SDK 暂未完全开放，如您需咨询或使用相关服务，请填写 [Linux SDK 问卷](https://cloud.tencent.com/apply/p/bmpdfyvtui)。我们会在2个-3个工作日内完成评估并反馈结果。 | 双录、存档、合规等。                                         | 使用服务端本地录制功能将产生基础服务用量，需支付 [基础服务费用](https://cloud.tencent.com/document/product/647/17157#.E5.9F.BA.E7.A1.80.E6.9C.8D.E5.8A.A1)。 |
 | 高音质         | <li>支持48kHz采样的高音质。</li><li>支持真左右声道立体声音频，媲美纯正 CD 效果。</li> | 语音通话、视频通话、互动直播、语聊房、高音质 FM、音乐教学课、K 歌房、在线课堂等。 | 免费                                                         |
 | 高画质         | 支持720P、1080P的高清画质视频。                              | 视频通话、互动直播、在线课堂等。                             | 免费                                                         |
 | 3A 处理        | 由行业领先的 TRAE 音频引擎进行 3A 处理，在双讲、降噪等场景下提供更好的声音质量。3A 即 AEC（回声消除）、ANS（自动噪声抑制）、AGC（自动增益控制）。 | 所有语音场景。                                               | 免费                                                         |
