--- a/product/视频服务/实时音视频/常见问题/其他问题.md
+++ b/product/视频服务/实时音视频/常见问题/其他问题.md
@@ -226,3 +226,6 @@ TRTC 支持手动录制，具体操作办法如下：
 当观众使用直播模式时，观众进入房间观看会通过 TRTCCloudDelegate 中的 [onUserVideoAvailable](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__ITRTCCloudCallback__cplusplus.html#a091f1c94ff1e2bc39c36e9d34285e87a) 回调获知主播的 userid（连麦的人也会 [enterRoom](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__TRTCCloud__cplusplus.html#a0fab3ea6c23c6267112bd1c0b64aa50b) 进房，对于观众来说也是主播）。然后观众可以调用 [startRemoteView](https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__TRTCCloud__cplusplus.html#a5c5ea936418b106c2e801db57938dde9) 方法来显示主播的视频画面。
 更多详细操作，请参见  [跑通直播模式(Windows)](https://cloud.tencent.com/document/product/647/35430) 。
 
+[](id:que41)
+### 实时音视频有 Linux SDK 吗？
+Linux SDK 暂未完全开放，若您需咨询或使用相关服务，请填写 [Linux SDK 问卷](https://cloud.tencent.com/apply/p/bmpdfyvtui)。我们会在2个-3个工作日内完成评估并反馈结果。
