--- a/product/存储与CDN/内容分发网络/购买指导/计费说明.md
+++ b/product/存储与CDN/内容分发网络/购买指导/计费说明.md
@@ -472,7 +472,7 @@ CDN 流量计费采用**月度阶梯累进**模式，阶梯价格如下：
 
 |计费项|	价格（元/万次）|	计费方式|	计费周期|
 |----|----|---|----|
-|QUIC 请求数	|0.05|	按量后付费	|月度结算<br/>**注**：后续会发布按小时结算，请关注。|
+|QUIC 请求数	|0.05|	按量后付费	|月度结算|
 
 
 
